<resources>
    <!--  App  -->
    <string name="app_name">MN Expedições</string>
    <string name="app_logo">Logo</string>

    <!--  Generic  -->
    <string name="generic_available">Disponível</string>
    <string name="generic_full_schedule">Agenda completa</string>
    <string name="generic_sold_out">Esgotado</string>
    <string name="generic_warning_tickets">Poucas vagas!</string>
    <string name="generic_included">O que está incluso?</string>
    <string name="generic_not_included">O que não está incluso?</string>
    <string name="generic_ticket">Ingressos</string>
    <string name="generic_full_price">Inteira</string>
    <string name="generic_half_price">Meia</string>
    <string name="generic_price">Valor</string>
    <string name="generic_filter_image">Imagem do filtro</string>
    <string name="generic_slogan_message_1">Viva experiências únicas!</string>
    <string name="generic_slogan_message_2">Colecione momentos.</string>
    <string name="generic_ticket_price">R$ %.2f</string>
    <string name="generic_filtering_for"><![CDATA[Filtrando por <b>%s</b>]]></string>
    <string name="generic_error_register_phone">Telefone já cadastrado.</string>

    <!--  Event  -->
    <string name="event_photo">Foto do evento</string>
    <string name="event_photo_blurred">Foto do evento borrada como background</string>
    <string name="event_description">Descrição do evento</string>
    <string name="event_next_events">Próximos eventos</string>
    <string name="events_empty_placeholder">Ops... parece que não temos evento nesta categoria.</string>

    <!--  Trip  -->
    <string name="trip_description">Descrição da viagem</string>
    <string name="trip_trip">Trip</string>
    <string name="trip_installments_msg"><u>Parcele sua viagem em até %s!</u></string>


    <!--  Checkout  -->
    <string name="checkout_buy_whatsapp">Comprar pelo whatsapp</string>
    <string name="checkout_buy_app">Pague pelo app</string>
    <string name="checkout_new_method_soon">Estamos trabalhando para em breve disponibilizar pagamento pelo app! =)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  Schedule  -->
    <string name="schedule_event_type">Escolha o tipo de passeio</string>
    <string name="schedule_main_slogan">Fazendo a vida valer a pena.</string>

    <!--  Main  -->
    <string name="main_home">Início</string>
    <string name="main_schedule">Agenda</string>
    <string name="main_back">Voltar</string>
    <string name="main_profile">Perfil</string>

    <!--  Profile  -->
    <string name="profile_camera">CÂMERA</string>
    <string name="profile_gallery">GALERIA</string>
    <string name="profile_edit_profile">Editar perfil</string>
    <string name="profile_favorites">Favoritos</string>
    <string name="profile_history">Histórico</string>
    <string name="profile_tickets">Cupoms</string>
    <string name="profile_help">Ajuda</string>
    <string name="profile_logout">Sair</string>
    <string name="profile_profile_image">Imagem de perfil</string>

    <!--  Register  -->
    <string name="register_create_account">Crie sua conta</string>
    <string name="register_fullname">Nome completo</string>
    <string name="register_phone">Telefone</string>
    <string name="register_password">Senha</string>
    <string name="register_confirm_password">Confirme a sua senha</string>
    <string name="register_show_passwords">Visualizar senhas</string>
    <string name="register_next">Próximo</string>

    <!--  Login  -->
    <string name="login_app_logo">Logo do aplicativo</string>
    <string name="login_explore_new_places">Explore novos lugares com a gente</string>
    <string name="login_keep_login">Manter conectado</string>
    <string name="login_show_password">Visualizar senha</string>
    <string name="login_forgotten_password">Esqueceu a sua senha?</string>
    <string name="login_havent_account">Não tem uma conta?</string>
    <string name="login_create_now">Crie agora!</string>
    <string name="login_or">ou</string>
    <string name="login_google_icon">Icone do google</string>
    <string name="login_google_sigin">Entrar com o Google</string>

    <!--  Edit Profile  -->
    <string name="editprofile_birthday">Data de nascimento</string>
    <string name="editprofile_cpf">CPF</string>
    <string name="editprofile_change_password">Quero alterar minha senha</string>
    <string name="generic_error">Erro insperado. Tente novamente.</string>
</resources>