<?xml version="1.0" encoding="utf-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/lnr_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/logo_no_margin"
                android:contentDescription="@string/login_app_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/app_name"
                android:textColor="@color/pink"
                android:textSize="@dimen/txt_big_large_3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_explore_new_places"
                android:textColor="@color/blue_pool"
                android:textSize="@dimen/txt_medium_1" />

        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/cdv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/lnr_header"
            app:cardCornerRadius="30dp"
            app:cardElevation="10dp"
            android:paddingVertical="16dp"
            android:layout_marginHorizontal="42dp"
            android:layout_marginTop="16dp">

            <com.santalu.maskara.widget.MaskEditText
                android:id="@+id/tie_phone"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@android:color/transparent"
                android:inputType="number"
                android:hint="@string/register_phone"
                android:textColorHint="@color/hint"
                android:layout_marginStart="16dp"
                app:mask="+55 (__) _____-____"
                app:maskStyle="completable"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            app:layout_constraintTop_toBottomOf="@id/cdv_email"
            android:id="@+id/cdv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="30dp"
            android:layout_marginHorizontal="42dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:background="@android:color/transparent"
                android:hint="@string/register_password"
                android:inputType="textPassword"
                android:textColorHint="@color/hint" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cdv_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="@color/pink"
            app:cardCornerRadius="30dp"
            app:layout_constraintEnd_toEndOf="@id/cdv_password"
            app:layout_constraintTop_toBottomOf="@id/cdv_password">

            <ImageView
                android:id="@+id/img_next"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:src="@drawable/ic_next"
                app:tint="@color/white"
                android:contentDescription="@string/register_next" />

            <ProgressBar
                android:id="@+id/pgb_loading"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:indeterminateTint="@color/white"
                android:visibility="gone"/>

        </androidx.cardview.widget.CardView>

    <CheckBox
        android:id="@+id/ckb_keep_login"
        app:layout_constraintTop_toBottomOf="@id/cdv_password"
        app:layout_constraintStart_toStartOf="@id/cdv_password"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/grey"
        android:buttonTint="@color/pink"
        android:text="@string/login_keep_login"/>

    <TextView
        android:id="@+id/txt_password_visibility_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_show_password"
        app:layout_constraintTop_toBottomOf="@id/ckb_keep_login"
        app:layout_constraintStart_toStartOf="@id/cdv_password"
        android:layout_marginStart="4dp"
        app:drawableStartCompat="@drawable/ic_visibility_off"
        android:drawablePadding="4dp"
        android:gravity="center"
        app:drawableTint="@color/pink" />

        <TextView
            android:id="@+id/txt_forgotten_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="4dp"
            android:text="@string/login_forgotten_password"
            android:textSize="@dimen/txt_small_1"
            app:layout_constraintStart_toStartOf="@id/cdv_password"
            app:layout_constraintTop_toBottomOf="@id/txt_password_visibility_toggle" />

        <LinearLayout
            android:id="@+id/lnr_create_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="4dp"
            app:layout_constraintStart_toStartOf="@id/cdv_password"
            app:layout_constraintTop_toBottomOf="@id/txt_forgotten_password">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/login_havent_account"
                android:textSize="@dimen/txt_small_1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/login_create_now"
                android:textColor="@color/pink"
                android:textSize="@dimen/txt_small_1" />


        </LinearLayout>

        <TextView
            android:id="@+id/txt_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/login_or"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lnr_create_acc"
            android:visibility="gone"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginEnd="8dp"
            android:background="@color/grey"
            app:layout_constraintBottom_toBottomOf="@id/txt_or"
            app:layout_constraintEnd_toStartOf="@id/txt_or"
            app:layout_constraintStart_toStartOf="@id/cdv_password"
            app:layout_constraintTop_toTopOf="@id/txt_or"
            android:visibility="gone"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginStart="8dp"
            android:background="@color/grey"
            app:layout_constraintBottom_toBottomOf="@id/txt_or"
            app:layout_constraintEnd_toEndOf="@id/cdv_password"
            app:layout_constraintStart_toEndOf="@id/txt_or"
            app:layout_constraintTop_toTopOf="@id/txt_or"
            android:visibility="gone"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cdv_google_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="42dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="10dp"
            app:layout_constraintTop_toBottomOf="@id/txt_or"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="32dp"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_google"
                    android:contentDescription="@string/login_google_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/login_google_sigin"
                    android:textColor="@color/blue" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
