<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/txt_create_your_acc"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/register_create_account"
        android:textSize="@dimen/txt_large_1"
        android:textColor="@color/pink"
        android:fontFamily="@font/montserrat_bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cdv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_create_your_acc"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp"
        android:layout_marginHorizontal="42dp"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:background="@android:color/transparent"
            android:hint="@string/register_fullname"
            android:inputType="textPersonName"
            android:textColorHint="@color/hint" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cdv_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cdv_name"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp"
        android:layout_marginHorizontal="42dp"
        android:layout_marginTop="16dp">

        <com.santalu.maskara.widget.MaskEditText
            android:id="@+id/tie_phone"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@android:color/transparent"
            android:inputType="number"
            android:hint="@string/register_phone"
            android:textColorHint="@color/hint"
            android:layout_marginStart="16dp"
            app:mask="+55 (__) _____-____"
            app:maskStyle="completable"/>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cdv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cdv_phone"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp"
        android:layout_marginHorizontal="42dp"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:background="@android:color/transparent"
            android:hint="@string/register_password"
            android:inputType="textPassword"
            android:textColorHint="@color/hint" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cdv_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cdv_password"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp"
        android:layout_marginHorizontal="42dp"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:background="@android:color/transparent"
            android:hint="@string/register_confirm_password"
            android:inputType="textPassword"
            android:textColorHint="@color/hint" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/txt_password_visibility_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_show_passwords"
        app:layout_constraintTop_toBottomOf="@id/cdv_confirm_password"
        app:layout_constraintStart_toStartOf="@id/cdv_confirm_password"
        android:layout_marginTop="8dp"
        android:layout_marginStart="4dp"
        app:drawableStartCompat="@drawable/ic_eye"
        android:drawablePadding="4dp"
        android:gravity="center"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cdv_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/pink"
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="@id/cdv_confirm_password"
        app:layout_constraintTop_toBottomOf="@id/cdv_confirm_password">

        <ImageView
            android:id="@+id/img_next"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:src="@drawable/ic_next"
            app:tint="@color/white"
            android:contentDescription="@string/register_next" />

        <ProgressBar
            android:id="@+id/pgb_loading"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:indeterminateTint="@color/white"
            android:visibility="gone"/>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>