<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".features.profile.presentation.ProfileFragment"
    android:background="@drawable/beige_gradient_background">

    <com.google.android.material.card.MaterialCardView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:id="@+id/cdv_profile_img"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:cardCornerRadius="50dp"
        app:cardBackgroundColor="@color/white"
        android:layout_marginStart="16dp"
        app:cardElevation="10dp"
        app:strokeWidth="1dp">

        <ImageView
            android:id="@+id/img_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_add_photo_black_42"
            android:contentDescription="@string/profile_profile_image" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cdv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cdv_profile_img"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp"
        android:layout_marginHorizontal="42dp"
        android:layout_marginTop="16dp"
        app:strokeWidth="1dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:background="@android:color/transparent"
            android:hint="@string/register_fullname"
            android:inputType="textPersonName"
            android:textColorHint="@color/hint" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cdv_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cdv_name"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp"
        android:layout_marginHorizontal="42dp"
        android:layout_marginTop="16dp"
        app:strokeWidth="1dp">

        <com.santalu.maskara.widget.MaskEditText
            android:id="@+id/tie_phone"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@android:color/transparent"
            android:inputType="number"
            android:hint="@string/register_phone"
            android:textColorHint="@color/hint"
            android:layout_marginStart="16dp"
            app:mask="+55 (__) _____-____"
            app:maskStyle="completable"/>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cdv_birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cdv_phone"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp"
        android:layout_marginHorizontal="42dp"
        android:layout_marginTop="16dp"
        app:strokeWidth="1dp">

        <com.santalu.maskara.widget.MaskEditText
            android:id="@+id/tie_birthday"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@android:color/transparent"
            android:inputType="number"
            android:hint="@string/editprofile_birthday"
            android:textColorHint="@color/hint"
            android:layout_marginStart="16dp"
            app:maskCharacter="_"
            app:mask="__/__/____"
            app:maskStyle="completable"/>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cdv_cpf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cdv_birthday"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp"
        android:layout_marginHorizontal="42dp"
        android:layout_marginTop="16dp"
        app:strokeWidth="1dp">

        <com.santalu.maskara.widget.MaskEditText
            android:id="@+id/tie_cpf"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@android:color/transparent"
            android:inputType="number"
            android:hint="@string/editprofile_cpf"
            android:textColorHint="@color/hint"
            android:layout_marginStart="16dp"
            app:maskCharacter="_"
            app:mask="___.___.___-__"
            app:maskStyle="completable"/>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/txt_change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat_bold"
        app:layout_constraintTop_toBottomOf="@id/cdv_cpf"
        app:layout_constraintStart_toStartOf="@id/cdv_cpf"
        android:text="@string/editprofile_change_password"
        android:gravity="center_vertical"
        android:textColor="@color/pink"
        android:textSize="@dimen/txt_small_1"
        app:drawableEndCompat="@drawable/ic_thin_arrow_right_24"
        app:drawableTint="@color/pink" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cdv_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/pink"
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="@id/cdv_cpf"
        app:layout_constraintTop_toBottomOf="@id/cdv_cpf">

        <ImageView
            android:id="@+id/img_next"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:src="@drawable/ic_check"
            app:tint="@color/white"
            android:contentDescription="@string/register_next" />

        <ProgressBar
            android:id="@+id/pgb_loading"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:indeterminateTint="@color/white"
            android:visibility="gone"/>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>